--- a/style/partials/_header.scss
+++ b/style/partials/_header.scss
@@ -82,6 +82,13 @@ header {
                     cursor: pointer;
                     align-self: center;
                     border-bottom: solid 1px;
+                    display: flex;
+                    span {
+                        margin-left: 5px;
+                    }
+                    span.day {
+                        display: none;
+                    }
                 }
                 i {
                     display: none;
