--- a/style/style.css
+++ b/style/style.css
@@ -98,7 +98,12 @@ header {
           text-decoration: none;
           cursor: pointer;
           align-self: center;
-          border-bottom: solid 1px; }
+          border-bottom: solid 1px;
+          display: flex; }
+          header nav ul.menu li a span {
+            margin-left: 5px; }
+          header nav ul.menu li a span.day {
+            display: none; }
         header nav ul.menu li i {
           display: none;
           font-size: 30px;
