--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -288,10 +288,8 @@ section.favorites, section.mygifos {
 }
 
 section.gifcommunity {
-    width: 100%;
-
-    
-   div {
+    width: 100%;    
+   div.ctn-gifcomm {
        display: flex;
        align-items: center;
        flex-direction: column;
@@ -321,19 +319,48 @@ section.gifcommunity {
             color: $fifth-color;
             }
        }
-       div {
-           a {
-               display: none;
+       div.mainctn-gifs {
+        width: 100%;
+        i.ic {
+            position: absolute;
+            z-index: 4;
+            width: 48px;
+            height: 48px;
+            text-align: center;
+            border: 1px solid $first-color;
+            cursor: pointer;
+            background-color: $eleventh-color;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        i.prev {
+            left: 1%;
+            transform: translateY(280%);
+        }
+        div.ctn-gifs {
+            position: relative;
+            display: flex;
+            -webkit-box-align: center;
+            align-items: center;
+            width: fit-content;
+            height: 304px;
+            padding: 10px 0;
+            margin: 0px auto;
+            max-width: 90vw;
+            overflow-x: scroll;
+            scroll-behavior: smooth;
+            top: 0;
+            -webkit-box-pack: center;
+            transition: .5s ease-in-out;
+            
            }
-           div {
-               div {
-                    img {
-
-                    }
-               }
-               
-           }
+        i.next {
+            right: 1%;
+            transform: translateY(-370%);
+        }
        }
+       
    }
 }
 
