--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -1,3 +1,39 @@
+div.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+div.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+span.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+span.close:hover,
+span.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 section.search {
    display: grid;
    width: 100%;
@@ -296,7 +332,6 @@ section.gifcommunity {
        text-align: center;
        font-family: $first-font;
        background-color: $eleventh-color;
-       height: 430px;
        body.dark & {
         background-color: $eight-color;
         }
