--- a/style/style.css
+++ b/style/style.css
@@ -156,6 +156,38 @@ header {
         color: #5ED7C6; }
       header nav ul.menu li:hover {
         background-image: none; } }
+div.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  background-color: rgba(0, 0, 0, 0.4); }
+
+div.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; }
+
+span.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold; }
+
+span.close:hover,
+span.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer; }
+
 section.search {
   display: grid;
   width: 100%; }
@@ -389,8 +421,7 @@ section.gifcommunity {
     flex-direction: column;
     text-align: center;
     font-family: "Montserrat", sans-serif;
-    background-color: #F3F5F8;
-    height: 430px; }
+    background-color: #F3F5F8; }
     body.dark section.gifcommunity div.ctn-gifcomm {
       background-color: #222326; }
     section.gifcommunity div.ctn-gifcomm p.title {
