modal of gifcommunity works

--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -18,6 +18,9 @@ div.modal-content {
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    div.ctn-gif img {
+        width: 100%;
+    }
 }
 
 span.close {
