--- a/style/style.css
+++ b/style/style.css
@@ -175,6 +175,8 @@ div.modal-content {
   padding: 20px;
   border: 1px solid #888;
   width: 80%; }
+  div.modal-content div.ctn-gif img {
+    width: 100%; }
 
 span.close {
   color: #aaaaaa;
