--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -8,23 +8,33 @@ div.modal {
     width: 100%; 
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(255, 255, 255, 0.9);
 }
 
 div.modal-content {
     background-color: #fefefe;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
     width: 80%;
-    div.ctn-gif img {
+    div.ctn-gif {
+        img {
         width: 100%;
+
+        }
+    }
+    div.overlay {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        div.group-icons {
+            display: flex;
+            color: $first-color;
+        }
     }
 }
 
 span.close {
-    color: #aaaaaa;
+    color: $first-color;
     float: right;
     font-size: 28px;
     font-weight: bold;
