--- a/style/style.css
+++ b/style/style.css
@@ -44,7 +44,7 @@ header {
   border-top: solid 5px #572EE5;
   position: fixed;
   top: 0;
-  z-index: 999; }
+  z-index: 1; }
   body.dark header {
     background-color: #37383C;
     border-top: solid 5px #000000; }
@@ -166,20 +166,25 @@ div.modal {
   width: 100%;
   height: 100%;
   overflow: auto;
-  background-color: black;
-  background-color: rgba(0, 0, 0, 0.4); }
+  background-color: rgba(255, 255, 255, 0.9); }
 
 div.modal-content {
   background-color: #fefefe;
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
   width: 80%; }
   div.modal-content div.ctn-gif img {
     width: 100%; }
+  div.modal-content div.overlay {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
+    div.modal-content div.overlay div.group-icons {
+      display: flex;
+      color: #572EE5; }
 
 span.close {
-  color: #aaaaaa;
+  color: #572EE5;
   float: right;
   font-size: 28px;
   font-weight: bold; }
