--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -299,7 +299,6 @@ section.favorites, section.mygifos {
     div.ctn-items {
         display: flex;
         flex-direction: column;
-        margin-top: 100px;
         align-items: center;
         img.icon {
             width: 25px;
@@ -318,7 +317,7 @@ section.favorites, section.mygifos {
         img.img-nocontent {
             width: 150px;
             height: 150px;
-            margin-top: 100px;
+            margin-top: 50px;
         }
         p.txt {
             font-family: $first-font;
@@ -330,8 +329,94 @@ section.favorites, section.mygifos {
             margin-bottom: 115px;
             width: 75%;
         }
-        div.ctn-content {
-            
+      
+    }
+    div.root-fav {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-column-gap: 10.5px;
+        // grid-template-rows: 132.5px 132.5px 132.5px 132.5px 132.5px 132.5px;
+        grid-row-gap: 10.5px;
+        padding: 10px;
+        div.error-results {
+            display: flex;
+            flex-direction: column;
+            padding: 20px 10%;
+            text-align: center;
+            p {
+                font-size: 22px;
+                font-family: $first-font;
+                color: $seventh-color;
+                line-height: 25px;
+                font-weight: 700;
+            }
+        }
+        div.ctn-gif {
+        width: 100%;
+        position: relative;
+            img.img-gif {
+                display: block;
+                width: 100%;
+                height: 100%;
+            }
+            div.overlay {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                height: 100%;
+                width: 100%;
+                opacity: 0;
+                transition: .5s ease;
+                background-color: $first-color;
+                div.group-icons {
+                    position: absolute;
+                    right: 0;
+                    top: 0;
+                    display: flex;
+                    padding-right: 2.5px;
+                    div.icon {
+                        opacity: 0.7;
+                        background: $fifth-color;
+                        width: 20px;
+                        height: 20px;
+                        margin: 5px 2.5px;
+                        border-radius: 6px;
+                        i {
+                            color: $first-color;
+                            margin-left: 4.5px;
+                            font-size: 12px;
+                        }
+                    }
+                    div.icon:hover {
+                        opacity: 1;
+                    }
+                }
+                div.text-card {
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    p.text-user {
+                        font-family: $second-font;
+                        font-size: 14px;
+                        color: $fifth-color;
+                        padding-left: 12px;
+                    }
+                    p.text-gift {
+                        font-family: $second-font;
+                        font-size: 15px;
+                        color: $fifth-color;
+                        padding-left: 12px;
+                        padding-bottom: 5px;
+                        width: 80%;
+                    }
+                } 
+            }
+
+        }
+        div.ctn-gif:hover div.overlay {
+            opacity: 0.7;
         }
     }
 }
