--- a/style/style.css
+++ b/style/style.css
@@ -392,7 +392,6 @@ section.favorites, section.mygifos {
   section.favorites div.ctn-items, section.mygifos div.ctn-items {
     display: flex;
     flex-direction: column;
-    margin-top: 100px;
     align-items: center; }
     section.favorites div.ctn-items img.icon, section.mygifos div.ctn-items img.icon {
       width: 25px;
@@ -408,7 +407,7 @@ section.favorites, section.mygifos {
     section.favorites div.ctn-items img.img-nocontent, section.mygifos div.ctn-items img.img-nocontent {
       width: 150px;
       height: 150px;
-      margin-top: 100px; }
+      margin-top: 50px; }
     section.favorites div.ctn-items p.txt, section.mygifos div.ctn-items p.txt {
       font-family: "Montserrat", sans-serif;
       font-size: 17px;
@@ -418,6 +417,78 @@ section.favorites, section.mygifos {
       margin-top: 23px;
       margin-bottom: 115px;
       width: 75%; }
+  section.favorites div.root-fav, section.mygifos div.root-fav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10.5px;
+    grid-row-gap: 10.5px;
+    padding: 10px; }
+    section.favorites div.root-fav div.error-results, section.mygifos div.root-fav div.error-results {
+      display: flex;
+      flex-direction: column;
+      padding: 20px 10%;
+      text-align: center; }
+      section.favorites div.root-fav div.error-results p, section.mygifos div.root-fav div.error-results p {
+        font-size: 22px;
+        font-family: "Montserrat", sans-serif;
+        color: #50E3C2;
+        line-height: 25px;
+        font-weight: 700; }
+    section.favorites div.root-fav div.ctn-gif, section.mygifos div.root-fav div.ctn-gif {
+      width: 100%;
+      position: relative; }
+      section.favorites div.root-fav div.ctn-gif img.img-gif, section.mygifos div.root-fav div.ctn-gif img.img-gif {
+        display: block;
+        width: 100%;
+        height: 100%; }
+      section.favorites div.root-fav div.ctn-gif div.overlay, section.mygifos div.root-fav div.ctn-gif div.overlay {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+        opacity: 0;
+        transition: .5s ease;
+        background-color: #572EE5; }
+        section.favorites div.root-fav div.ctn-gif div.overlay div.group-icons, section.mygifos div.root-fav div.ctn-gif div.overlay div.group-icons {
+          position: absolute;
+          right: 0;
+          top: 0;
+          display: flex;
+          padding-right: 2.5px; }
+          section.favorites div.root-fav div.ctn-gif div.overlay div.group-icons div.icon, section.mygifos div.root-fav div.ctn-gif div.overlay div.group-icons div.icon {
+            opacity: 0.7;
+            background: #FFFFFF;
+            width: 20px;
+            height: 20px;
+            margin: 5px 2.5px;
+            border-radius: 6px; }
+            section.favorites div.root-fav div.ctn-gif div.overlay div.group-icons div.icon i, section.mygifos div.root-fav div.ctn-gif div.overlay div.group-icons div.icon i {
+              color: #572EE5;
+              margin-left: 4.5px;
+              font-size: 12px; }
+          section.favorites div.root-fav div.ctn-gif div.overlay div.group-icons div.icon:hover, section.mygifos div.root-fav div.ctn-gif div.overlay div.group-icons div.icon:hover {
+            opacity: 1; }
+        section.favorites div.root-fav div.ctn-gif div.overlay div.text-card, section.mygifos div.root-fav div.ctn-gif div.overlay div.text-card {
+          position: absolute;
+          left: 0;
+          bottom: 0; }
+          section.favorites div.root-fav div.ctn-gif div.overlay div.text-card p.text-user, section.mygifos div.root-fav div.ctn-gif div.overlay div.text-card p.text-user {
+            font-family: "Roboto", sans-serif;
+            font-size: 14px;
+            color: #FFFFFF;
+            padding-left: 12px; }
+          section.favorites div.root-fav div.ctn-gif div.overlay div.text-card p.text-gift, section.mygifos div.root-fav div.ctn-gif div.overlay div.text-card p.text-gift {
+            font-family: "Roboto", sans-serif;
+            font-size: 15px;
+            color: #FFFFFF;
+            padding-left: 12px;
+            padding-bottom: 5px;
+            width: 80%; }
+    section.favorites div.root-fav div.ctn-gif:hover div.overlay, section.mygifos div.root-fav div.ctn-gif:hover div.overlay {
+      opacity: 0.7; }
 
 section.gifcommunity {
   width: 100%; }
