--- a/style/partials/_main.scss
+++ b/style/partials/_main.scss
@@ -296,6 +296,8 @@ section.error {
 section.favorites, section.mygifos {
     width: 100%;
     display: none;
+    flex-direction: column;
+    align-items: center;
     div.ctn-items {
         display: flex;
         flex-direction: column;
@@ -335,7 +337,6 @@ section.favorites, section.mygifos {
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-column-gap: 10.5px;
-        // grid-template-rows: 132.5px 132.5px 132.5px 132.5px 132.5px 132.5px;
         grid-row-gap: 10.5px;
         padding: 10px;
         div.error-results {
@@ -418,6 +419,12 @@ section.favorites, section.mygifos {
         div.ctn-gif:hover div.overlay {
             opacity: 0.7;
         }
+    }
+    button.see-more {
+        color: $first-color;
+        background-color: $fifth-color;
+        margin: 45px 0px;
+        font-weight: 600;
     }
 }
 
