--- a/style/style.css
+++ b/style/style.css
@@ -388,7 +388,9 @@ section.error {
 
 section.favorites, section.mygifos {
   width: 100%;
-  display: none; }
+  display: none;
+  flex-direction: column;
+  align-items: center; }
   section.favorites div.ctn-items, section.mygifos div.ctn-items {
     display: flex;
     flex-direction: column;
@@ -489,6 +491,11 @@ section.favorites, section.mygifos {
             width: 80%; }
     section.favorites div.root-fav div.ctn-gif:hover div.overlay, section.mygifos div.root-fav div.ctn-gif:hover div.overlay {
       opacity: 0.7; }
+  section.favorites button.see-more, section.mygifos button.see-more {
+    color: #572EE5;
+    background-color: #FFFFFF;
+    margin: 45px 0px;
+    font-weight: 600; }
 
 section.gifcommunity {
   width: 100%; }
